added short bio

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,9 +1,14 @@
-<html>
-	<header>
+<!DOCTYPE html>
+<html lang="en-US">
+	<head>
 		<title>Jacob Yacovelli</title>
-	</header>
+		<link rel="stylesheet" type="text/css" href="index.css">
+	</head>
 	<body>
 		<h1>Jacob Yacovelli</h1>
-		<h2>Hi everybody!</h2>
+		<p>Hello and welcome to my personal site. I currently work as a software
+		engineer. I studied at Virginia Tech and graduated as an Electrical Engineer.
+		I enjoy learning new technologies pushing myself to know every aspect of what
+		I work on.</p>
 	</body>
 </html>
