beginning layout of page

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,10 +5,25 @@
 		<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 	<body>
-		<h1>Jacob Yacovelli</h1>
-		<p>Hello and welcome to my personal site. I currently work as a software
-		engineer. I studied at Virginia Tech and graduated as an Electrical Engineer.
-		I enjoy learning new technologies pushing myself to know every aspect of what
-		I work on.</p>
+		<span class="top">
+			<span>
+				<img src="images/icon.jpg" alt="logo"/>
+				<h1>Jacob Yacovelli</h1>
+			</span>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">Resume</a></li>
+				<li><a href="index.html">Projects</a></li>
+				<li><a href="index.html">Hobbies</a></li>
+			</ul>
+		</span>
+		<div class="about">
+			<h2><b>About</b></h2>
+			<p>Hello and welcome to my personal site. I currently work as a software
+			engineer. I studied at Virginia Tech and graduated as an Electrical Engineer.
+			I enjoy learning new technologies pushing myself to know every aspect of what
+			I work on.</p>
+			<p>This site is currently under construction.</p>
+		</div>
 	</body>
 </html>
