--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,13 +17,18 @@
 				<li><a href="index.html">Hobbies</a></li>
 			</ul>
 		</span>
-		<div class="about">
-			<h2><b>About</b></h2>
-			<p>Hello and welcome to my personal site. I currently work as a software
-			engineer. I studied at Virginia Tech and graduated as an Electrical Engineer.
-			I enjoy learning new technologies pushing myself to know every aspect of what
-			I work on.</p>
-			<p>This site is currently under construction.</p>
+		<div class="side_spacing">
+			<div class="about">
+				<h2><b>About</b></h2>
+				<p>Hello and welcome to my personal site. I currently work as a software
+				engineer. I studied at Virginia Tech and graduated as an Electrical Engineer.
+				I enjoy learning new technologies pushing myself to know every aspect of what
+				I work on.</p>
+				<p>This site is currently under construction.</p>
+			</div>
 		</div>
+		<span class="bottom">
+			<p>&copy; 2017 <a href="index.html">Jacob Yacovelli</a> <a href="index.html">Contact Me</a></p>
+		</span>
 	</body>
 </html>
