--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,10 +21,10 @@
 				<h1>Jacob Yacovelli</h1>
 			</span>
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="index.html">Resume</a></li>
-				<li><a href="index.html">Projects</a></li>
-				<li><a href="index.html">Hobbies</a></li>
+				<li><a href="index.html">Home</a></li
+				><li><a href="index.html">Resume</a></li
+				><li><a href="index.html">Projects</a></li
+				><li><a href="index.html">Hobbies</a></li>
 			</ul>
 		</span>
 		<div class="side_spacing">
