reorginized file structure

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 		<title>Jacob Yacovelli</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="../public_css/main.css">
 
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -17,7 +17,7 @@
 	<body>
 		<span class="top">
 			<span>
-				<img src="images/icon.jpg" alt="logo"/>
+				<img src="../public_images/icon.jpg" alt="logo"/>
 				<h1>Jacob Yacovelli</h1>
 			</span>
 			<ul>
