--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,6 +4,9 @@
 		<title>Jacob Yacovelli</title>
 		<link rel="stylesheet" type="text/css" href="../public_css/main.css">
 
+		<link rel="shortcut icon" href="../public_images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../public_images/favicon.ico" type="image/x-icon">
+
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -27,6 +30,7 @@
 				><li><a href="index.html">Hobbies</a></li>
 			</ul>
 		</span>
+
 		<div class="side_spacing">
 			<div class="about">
 				<h2><b>About</b></h2>
@@ -37,6 +41,7 @@
 				<p>This site is currently under construction.</p>
 			</div>
 		</div>
+
 		<span class="bottom">
 			<p>&copy; 2017 <a href="index.html">Jacob Yacovelli</a> <a href="index.html">Contact Me</a></p>
 		</span>
