--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,20 +8,20 @@
 		<link rel="icon" href="../public_images/favicon.ico" type="image/x-icon">
 
 		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-		  ga('create', 'UA-99978877-1', 'auto');
-		  ga('send', 'pageview');
+			ga('create', 'UA-99978877-1', 'auto');
+			ga('send', 'pageview');
 		</script>
 	</head>
 	<body>
 		<span class="top">
 			<span>
-				<img src="../public_images/icon.jpg" alt="logo"/>
-				<h1>Jacob Yacovelli</h1>
+				<a href="index.html"><img src="../public_images/icon.jpg" alt="logo"/>
+				<h1>Jacob Yacovelli</h1></a>
 			</span>
 			<ul>
 				<li><a href="index.html">Home</a></li
