--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
 	<head>
 		<title>Jacob Yacovelli</title>
-		<link rel="stylesheet" type="text/css" href="../public_css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 
-		<link rel="shortcut icon" href="../public_images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="../public_images/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -20,7 +20,7 @@
 	<body>
 		<span class="top">
 			<span>
-				<a href="index.html"><img src="../public_images/icon.jpg" alt="logo"/>
+				<a href="index.html"><img src="images/icon.jpg" alt="logo"/>
 				<h1>Jacob Yacovelli</h1></a>
 			</span>
 			<ul>
