added new picture for about page and edited background image

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
 		<div class="side_spacing">
 			<div class="about">
 				<h2><b>About</b></h2>
+				<img src="images/about.jpg"/>
 				<p>Hello and welcome to my personal site. I currently work as a software
 				engineer. I studied at Virginia Tech and graduated as an Electrical Engineer.
 				I enjoy learning new technologies pushing myself to know every aspect of what
